corrected expanded column size by setting zero-height to collapsed ones

--- a/public/css/columns.css
+++ b/public/css/columns.css
@@ -146,6 +146,7 @@
 }
 
 .group-column.collapsed {
+  height: 0;
   width: 0;
 }
 
